--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,17 +1,10 @@
 @import url(fontawesome-all.min.css);
 @import url("https://fonts.googleapis.com/css?family=Merriweather:300,700,300italic,700italic|Source+Sans+Pro:900");
 
-<<<<<<< HEAD
 /*
 	Massively by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
-=======
-/*
-	Massively by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
->>>>>>> e8c5abbebee517993afdb2e21f8e155f86607467
 */
 
 html, body, div, span, applet, object,
@@ -106,7 +99,7 @@ input, select, textarea {
 	}
 
 	body {
-		background-color: #1e252d;
+		background-color: #140e2c;
 	}
 
 		body.is-preload *, body.is-preload *:before, body.is-preload *:after {
